# robotworld

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac  gmon.out  robotworld_pr.geany  todo.txt
documentatie/doxygen/: Doxyfile
documentatie/doxygen/html/: _a_star_8hpp_source.html  _abstract_actuator_8hpp_source.html  _abstract_agent_8hpp_source.html  _abstract_sensor_8hpp_source.html  _bounded_vector_8hpp_source.html  _button_8hpp_source.html  _client_8hpp_source.html  _commandline_argument_8hpp_source.html  _communication_service_8hpp_source.html  _config_8hpp_source.html  _debug_trace_function_8hpp_source.html  _goal_8hpp_source.html  _goal_shape_8hpp_source.html  _laser_distance_sensor_8hpp_source.html  _line_shape_8hpp_source.html  _log_text_ctrl_8hpp_source.html  _logger_8hpp_source.html  _main_application_8hpp_source.html  _main_frame_window_8hpp_source.html  _math_utils_8hpp_source.html  _message_8hpp_source.html  _message_handler_8hpp_source.html  _mingw_std_8hpp_source.html  _model_object_8hpp_source.html  _notification_event_8hpp_source.html  _notification_function_type_traits_8hpp_source.html  _notification_handler_8hpp_source.html  _notifier_8hpp_source.html  _object_id_8hpp_source.html  _observer_8hpp_source.html  _point_8hpp_source.html  _queue_8hpp_source.html  _rectangle_shape_8hpp_source.html  _region_8hpp_source.html  _robot_8hpp_source.html  _robot_shape_8hpp_source.html  _robot_world_8hpp_source.html  _robot_world_canvas_8hpp_source.html  _server_8hpp_source.html  _session_8hpp_source.html  (+368 more)
documentatie/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  (+13 more)
documentatie/doxygen/latex/: annotated.tex  class_application_1_1_commandline_argument.tex  class_application_1_1_log_text_ctrl.tex  class_application_1_1_log_text_ctrl__inherit__graph.md5  class_application_1_1_logger.tex  class_application_1_1_main_application.tex  class_application_1_1_main_application__inherit__graph.md5  class_application_1_1_main_frame_window.tex  class_application_1_1_main_frame_window__coll__graph.md5  class_application_1_1_widget_debug_trace_function.tex  class_application_1_1_widget_debug_trace_function__inherit__graph.md5  class_base_1_1_debug_trace_function.tex  class_base_1_1_debug_trace_function__inherit__graph.md5  class_base_1_1_notification_handler.tex  class_base_1_1_notification_handler__inherit__graph.md5  class_base_1_1_notifier.tex  class_base_1_1_notifier__inherit__graph.md5  class_base_1_1_object_id.tex  class_base_1_1_object_id__inherit__graph.md5  class_base_1_1_observer.tex  class_base_1_1_observer__inherit__graph.md5  class_base_1_1_queue.tex  class_base_1_1_std_out_debug_trace_function.tex  class_base_1_1_std_out_debug_trace_function__inherit__graph.md5  class_messaging_1_1_client.tex  class_messaging_1_1_client_session.tex  class_messaging_1_1_client_session__inherit__graph.md5  class_messaging_1_1_communication_service.tex  class_messaging_1_1_message_handler.tex  class_messaging_1_1_message_handler__coll__graph.md5  class_messaging_1_1_message_handler__inherit__graph.md5  class_messaging_1_1_request_handler.tex  class_messaging_1_1_request_handler__inherit__graph.md5  class_messaging_1_1_response_handler.tex  class_messaging_1_1_response_handler__inherit__graph.md5  class_messaging_1_1_server.tex  class_messaging_1_1_server_session.tex  class_messaging_1_1_server_session__inherit__graph.md5  class_messaging_1_1_session.tex  class_messaging_1_1_session__inherit__graph.md5  (+83 more)
documentatie/doxygen/xml/: _a_star_8cpp.xml  _a_star_8hpp.xml  _abstract_actuator_8cpp.xml  _abstract_actuator_8hpp.xml  _abstract_agent_8cpp.xml  _abstract_agent_8hpp.xml  _abstract_sensor_8cpp.xml  _abstract_sensor_8hpp.xml  _bounded_vector_8cpp.xml  _bounded_vector_8hpp.xml  _button_8hpp.xml  _client_8hpp.xml  _commandline_argument_8hpp.xml  _communication_service_8cpp.xml  _communication_service_8hpp.xml  _config_8hpp.xml  _debug_trace_function_8cpp.xml  _debug_trace_function_8hpp.xml  _goal_8cpp.xml  _goal_8hpp.xml  _goal_shape_8cpp.xml  _goal_shape_8hpp.xml  _laser_distance_sensor_8cpp.xml  _laser_distance_sensor_8hpp.xml  _line_shape_8cpp.xml  _line_shape_8hpp.xml  _log_text_ctrl_8cpp.xml  _log_text_ctrl_8hpp.xml  _logger_8cpp.xml  _logger_8hpp.xml  _main_8cpp.xml  _main_application_8cpp.xml  _main_application_8hpp.xml  _main_frame_window_8cpp.xml  _main_frame_window_8hpp.xml  _math_utils_8cpp.xml  _math_utils_8hpp.xml  _message_8hpp.xml  _message_handler_8hpp.xml  _mingw_std_8hpp.xml  (+125 more)
documentatie/plantuml/: Robotworld DCD  pip-selfcheck.json
linux/: .gitignore  build.sh  run.sh
src/: AStar.cpp  AbstractActuator.cpp  AbstractActuator.hpp  AbstractAgent.cpp  AbstractAgent.hpp  AbstractSensor.cpp  AbstractSensor.hpp  BoundedVector.cpp  BoundedVector.hpp  CMakeLists.txt  CommunicationService.cpp  Goal.cpp  Goal.hpp  GoalShape.cpp  GoalShape.hpp  LaserDistanceSensor.cpp  LaserDistanceSensor.hpp  LineShape.cpp  LineShape.hpp  MainFrameWindow.cpp  MainFrameWindow.hpp  Makefile.in  Message.hpp  ModelObject.cpp  ModelObject.hpp  RectangleShape.cpp  RectangleShape.hpp  Robot.cpp  Robot.hpp  RobotShape.cpp  RobotShape.hpp  RobotWorld.cpp  RobotWorld.hpp  RobotWorldCanvas.cpp  RobotWorldCanvas.hpp  Session.hpp  Shape.hpp  Shape2DUtils.cpp  Shape2DUtils.hpp  SteeringActuator.cpp  (+12 more)
