add_executable(app_robotworld
        AbstractActuator.cpp
        AbstractActuator.hpp
        AbstractAgent.cpp
        AbstractAgent.hpp
        AbstractSensor.cpp
        AbstractSensor.hpp
        AStar.cpp
        AStar.hpp
        BoundedVector.cpp
        BoundedVector.hpp
        Button.hpp
        Client.hpp
        CommandlineArgument.hpp
        CommunicationService.cpp
        CommunicationService.hpp
        config.h.in
        Config.hpp
        DebugTraceFunction.cpp
        DebugTraceFunction.hpp
        Goal.cpp
        Goal.hpp
        GoalShape.cpp
        GoalShape.hpp
        LaserDistanceSensor.cpp
        LaserDistanceSensor.hpp
        LineShape.cpp
        LineShape.hpp
        Logger.cpp
        Logger.hpp
        LogTextCtrl.cpp
        LogTextCtrl.hpp
        Main.cpp
        MainApplication.cpp
        MainApplication.hpp
        MainFrameWindow.cpp
        MainFrameWindow.hpp
        MathUtils.cpp
        MathUtils.hpp
        Message.hpp
        MessageHandler.hpp
        MingwStd.hpp
        ModelObject.cpp
        ModelObject.hpp
        NotificationEvent.hpp
        NotificationFunctionTypeTraits.hpp
        NotificationHandler.cpp
        NotificationHandler.hpp
        Notifier.cpp
        Notifier.hpp
        ObjectId.cpp
        ObjectId.hpp
        Observer.cpp
        Observer.hpp
        Point.hpp
        Queue.hpp
        RectangleShape.cpp
        RectangleShape.hpp
        Region.hpp
        Robot.cpp
        Robot.hpp
        RobotShape.cpp
        RobotShape.hpp
        RobotWorld.cpp
        RobotWorld.hpp
        RobotWorldCanvas.cpp
        RobotWorldCanvas.hpp
        Server.hpp
        Session.hpp
        Shape.hpp
        Shape2DUtils.cpp
        Shape2DUtils.hpp
        Size.hpp
        StdOutDebugTraceFunction.cpp
        StdOutDebugTraceFunction.hpp
        SteeringActuator.cpp
        SteeringActuator.hpp
        Thread.hpp
        TypeInfo.hpp
        ViewObject.cpp
        ViewObject.hpp
        Wall.cpp
        Wall.hpp
        WallShape.cpp
        WallShape.hpp
        WayPoint.cpp
        WayPoint.hpp
        WayPointShape.cpp
        WayPointShape.hpp
        WidgetDebugTraceFunction.cpp
        WidgetDebugTraceFunction.hpp
        Widgets.cpp
        Widgets.hpp
)

target_link_libraries(app_robotworld ${wxWidgets_LIBRARIES} ${boost_LIBRARIES} boost_system)